--- a/style.css
+++ b/style.css
@@ -109,6 +109,14 @@ nav {
     background-color: #F8F7F4;
 }
 
+.jacquemus {
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    background-color: red;
+}
+
 button {
     background: transparent;
     border: none;
@@ -174,6 +182,47 @@ button {
 .slide img {
     width: 100%;
     max-height: 70vw;
+    object-fit: contain;
+}
+
+.overlay {
+    opacity: 0;
+    transition: opacity 0.35s ease-in-out;
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background-color:rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(20px);
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.overlay.overlay-open {
+    opacity: 1;
+}
+
+.right-side {
+    display: flex;
+    justify-content: space-between;
+    gap: 8px;
+}
+
+.info-button {
+    font-family: Eurostile LT;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 0.24px;
+    font-size: 12px;
+    width: fit-content;
+    position: static;
+    padding: 0;
+    cursor: pointer;
 }
 
 .mobileimg-x2 {
@@ -209,10 +258,13 @@ button {
     letter-spacing: 0.24px;
     font-size: 0.75em;
     margin-bottom: -5px;
+    position: relative;
+    z-index: 3;
 }
 
 .roussey-3d {
     background-color: #9BC481;
+    position: relative;
 }
 
 .carousel {
@@ -281,6 +333,7 @@ h5 {
     align-items: center;
     padding: 1rem;
     position: relative;
+    z-index: 3;
 }
 
 .bar{
@@ -472,6 +525,10 @@ h5 {
         font-size: 20px;
     }
     .slide > img {
+        height: 65vh;
+    }
+
+    .slide > video {
         height: 65vh;
     }
 }
