--- a/style.css
+++ b/style.css
@@ -89,8 +89,9 @@ nav {
     justify-content: center;
     align-items: center;
     margin: 0;
-    background-color: #9BC481;
+    background-color: #8EEF51;
     padding-top: 50px;
+    position: relative;
 }
 
 .thursdays-child {
@@ -99,22 +100,34 @@ nav {
     align-items: center;
     margin: 0;
     background-color: #DFDFDF;
+    position: relative;
 }
 
-.beige-pill {
+.dries-van-noten {
     height: 100%;
     justify-content: center;
     align-items: center;
     margin: 0;
-    background-color: #F8F7F4;
+    background-color: #6790CD;
+    position: relative;
 }
 
-.jacquemus {
+.fleming {
     height: 100%;
     justify-content: center;
     align-items: center;
     margin: 0;
-    background-color: red;
+    background-color: #e3ff45;
+    position: relative;
+}
+
+.saatchi {
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    background-color: #34ffff;
+    position: relative;
 }
 
 button {
@@ -124,7 +137,7 @@ button {
     font-size: 1rem;
     padding: 1rem;
     position: absolute;
-    width: 50%;
+    width: 47%;
     z-index: 2;
     height: 100%;
 }
@@ -146,6 +159,7 @@ button {
     flex-direction: column;
     text-align: center;
     gap: 1rem;
+    color: white;
 }
 
 .slider {
@@ -185,6 +199,12 @@ button {
     object-fit: contain;
 }
 
+.slide video {
+    width: 100%;
+    max-height: 70vw;
+    object-fit: contain;
+}
+
 .overlay {
     opacity: 0;
     transition: opacity 0.35s ease-in-out;
@@ -193,7 +213,7 @@ button {
     left:0;
     right:0;
     bottom:0;
-    background-color:rgba(0, 0, 0, 0.4);
+    background-color:rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(20px);
     z-index: 2;
     display: flex;
@@ -225,6 +245,18 @@ button {
     cursor: pointer;
 }
 
+.visit-website {
+    font-family: Eurostile LT;
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: 0.24px;
+    font-size: 12px;
+    width: fit-content;
+    position: static;
+    padding: 0;
+    cursor: pointer;
+}
+
 .mobileimg-x2 {
     display: flex;
     justify-content: space-between;
@@ -235,11 +267,13 @@ button {
 .mobileimg-x2>img {
     width: auto;
     height: 70vh;
+    object-fit: contain;
 }
 
 .mobilevideo-x2>video {
     width: auto;
     height: 50vh;
+    object-fit: contain;
 }
 
 .mobilevideo-x2 {
@@ -247,6 +281,26 @@ button {
     justify-content: space-between;
     gap: 1em;
     max-height: 70vh;
+}
+
+.mobilemix-x2 {
+    display: flex;
+    width: auto;
+    justify-content: space-between;
+    gap: 1em;
+    max-height: 70vh;
+}
+
+.mobilemix-x2>img {
+    width: auto;
+    height: 70vh;
+    object-fit: contain;
+}
+
+.mobilemix-x2>video {
+    width: auto;
+    height: 70vh;
+    object-fit: contain;
 }
 
 .specs {
@@ -262,9 +316,12 @@ button {
     z-index: 3;
 }
 
-.roussey-3d {
-    background-color: #9BC481;
-    position: relative;
+.project-specs {
+    z-index: 10;
+}
+
+.info {
+    margin-bottom: 2px;
 }
 
 .carousel {
@@ -299,7 +356,7 @@ span {
     margin: 0;
 }
 
-h5, h6 {
+h5, h6, .visit-website {
     text-transform: uppercase;
     letter-spacing: 0.24px;
     font-size: 0.75em;
@@ -307,11 +364,11 @@ h5, h6 {
 }
 
 h6 {
-    font-weight: 100;
+    font-weight: bold;
 }
 
-h5 {
-    font-weight: bold;
+h5, .visit-website {
+    font-weight: 100;
 }
 
 .bar:first-of-type{
@@ -338,6 +395,14 @@ h5 {
 
 .bar{
     width: calc((100% - 1.5px)*0.2);
+    height: 2px;
+    background-color: rgba(0, 0, 0, 0.2);
+    display: block;
+    position: relative;
+}
+
+.bar-fourth {
+    width: 100%;
     height: 2px;
     background-color: rgba(0, 0, 0, 0.2);
     display: block;
@@ -459,7 +524,7 @@ h5 {
     text-decoration: none;
     color: black;
     margin: 0;
-    margin-bottom: 14px;
+    margin-bottom: 12px;
 }
 
 .company, .school {
@@ -485,12 +550,12 @@ h5 {
 }
 
 .experience:not(:last-child) {
-    margin-bottom: 16px;
+    margin-bottom: 8px;
 }
 
 .skills {
     margin-bottom: 1rem;
-    margin-top: 40px;
+    margin-top: 20px;
     letter-spacing: 0.24px;
     font-size: 12px;
     text-decoration: none;
@@ -517,9 +582,7 @@ h5 {
 }
 
 @media (min-width: 1023px) {
-    .mobilevideo-x2 > video {
-        height: 70vh;
-    }
+
     .slide-with-text > h3 {
         max-width: 60%;
         font-size: 20px;
@@ -530,6 +593,28 @@ h5 {
 
     .slide > video {
         height: 65vh;
+    }
+
+    .mobileimg-x2>img {
+        width: auto;
+        height: 65vh;
+    }
+
+    .mobilevideo-x2>video {
+        width: auto;
+        height: 65vh;
+    }
+
+    .mobilemix-x2>img {
+        width: auto;
+        height: 65vh;
+        object-fit: contain;
+    }
+
+    .mobilemix-x2>video {
+        width: auto;
+        height: 65vh;
+        object-fit: contain;
     }
 }
 
