--- a/style.css
+++ b/style.css
@@ -214,7 +214,8 @@ button {
     right:0;
     bottom:0;
     background-color:rgba(0, 0, 0, 0.3);
-    backdrop-filter: blur(20%);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(20px);
     z-index: 2;
     display: flex;
     align-items: center;
