--- a/style.css
+++ b/style.css
@@ -455,7 +455,7 @@ h5, .visit-website {
     height: 100%;
     overflow: scroll;
     position: relative;
-    padding: 50px 1rem 0;
+    padding: 50px 1rem;
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
@@ -587,6 +587,9 @@ h5, .visit-website {
     }
     .slider {
         height: 80vh;  
+    }
+    .about-container {
+        padding: 50px 1rem 0;
     }
 }
 
